# simelastic

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
src/simelastic/: __init__.py  ball.py  container3D.py  default_parameters.py  random_balls_in_container.py  run_simulation.py  simelastic.py  time_rendering.py  vector3D.py  version.py  write_dummy_js.py  write_html_ball_definition.py  write_html_camera.py  write_html_container.py  write_html_header.py  write_html_render_end.py  write_html_render_start.py  write_html_scene.py
tests/: test_simelastic.py
