[metadata]
name = simelastic
version = attr: simelastic.__version__
description = Simulation of elastic ball collisions
url: https://github.com/nicocardiel/simelastic
license = GPLv3
license_files = LICENSE
author = Nicolás Cardiel
author_email = cardiel@ucm.es
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = 
    =src
packages=find:
install_requires =
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    simelastic = simelastic.simelastic:main

[options.extras_require]
test =
    pytest
